# ariaflow-typesetter

./: .gitignore  .gitmodules  CMakeLists.txt  font_base.txt  language_test.aria  temp.h
export/: bbui_headeronly.h
inc/: application.h  document.h  rendering.h  user_interface.h  window.h
inc/bbui/: components.h  rendering.h
lib/portable-file-dialogs/: portable-file-dialogs.h
src/: application.cpp  application_menus.cpp  document.cpp  icon.h  main.cpp  shaders.h  textures.h  user_interface.cpp  user_interface_button_palette.cpp  user_interface_components.cpp  user_interface_menu.cpp  user_interface_rendering.cpp  user_interface_resizable_panel.cpp  user_interface_text_edit.cpp  user_interface_text_editor.cpp  user_interface_util.cpp  window.cpp
src/bbui/: backend_opengl.cpp  window.cpp
